--- a/deployment/network-operator/charts/sriov-network-operator/templates/operator.yaml
+++ b/deployment/network-operator/charts/sriov-network-operator/templates/operator.yaml
@@ -1,3 +1,18 @@
+{{/*
+  Copyright 2020 NVIDIA
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+*/}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -37,19 +52,19 @@ spec:
             - name: SRIOV_CNI_IMAGE
               value: {{ .Values.images.sriovCni }}
             - name: SRIOV_INFINIBAND_CNI_IMAGE
-              value: {{ .Values.images.ibSriovCni | quote }}
+              value: {{ .Values.images.ibSriovCni }}
             - name: SRIOV_DEVICE_PLUGIN_IMAGE
-              value: {{ .Values.images.sriovDevicePlugin | quote }}
+              value: {{ .Values.images.sriovDevicePlugin }}
             - name: NETWORK_RESOURCES_INJECTOR_IMAGE
               value: ""
             - name: OPERATOR_NAME
               value: sriov-network-operator
             - name: SRIOV_NETWORK_CONFIG_DAEMON_IMAGE
-              value: {{ .Values.images.sriovConfigDaemon | quote }}
+              value: {{ .Values.images.sriovConfigDaemon }}
             - name: SRIOV_NETWORK_WEBHOOK_IMAGE
               value: ""
             - name: RESOURCE_PREFIX
-              value: openshift.io
+              value: nvidia.com
             - name: ENABLE_ADMISSION_CONTROLLER
               value: "false"
             - name: NAMESPACE
